--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <c.mars.spacededit.SpacedEdit
+    <c.mars.spacededit.SpacedEdit android:id="@+id/e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView android:id="@+id/o"
+        android:layout_below="@+id/e"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <!--<include layout="@layout/spaced_edit"/>-->
 
