--- a/app/src/main/res/layout/spaced_edit.xml
+++ b/app/src/main/res/layout/spaced_edit.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/underlined">
 
     <EditText android:id="@+id/e1"
         style="@style/EditCell"/>
@@ -11,6 +13,7 @@
         style="@style/EditCell"/>
     <EditText android:id="@+id/e4"
         style="@style/EditCell"/>
-
+    <EditText android:id="@+id/e5"
+        style="@style/EditCell"/>
 
 </LinearLayout>
