--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:maxLength">1</item>
         <item name="android:layout_marginRight">@dimen/space</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
