--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,14 @@
 
     <c.mars.spacededit.SpacedEdit android:id="@+id/e"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"/>
 
     <TextView android:id="@+id/o"
         android:layout_below="@+id/e"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"/>
 
     <!--<include layout="@layout/spaced_edit"/>-->
 
