--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     <c.mars.spacededit.SpacedEdit android:id="@+id/e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"/>
 
     <TextView android:id="@+id/o"
         android:layout_below="@+id/e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
-
-    <!--<include layout="@layout/spaced_edit"/>-->
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"/>
 
 </RelativeLayout>
