--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:maxLength">1</item>
         <item name="android:layout_marginRight">@dimen/space</item>
         <item name="android:background">@android:color/transparent</item>
+        <item name="android:inputType">text|number</item>
     </style>
 
 </resources>
