--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
+    <EditText android:id="@+id/t"
+        android:text="111"
+        android:layout_below="@+id/o"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <c.mars.spacededit.SpacedEdit android:id="@+id/e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
